test linter